macros/tests/compile_fail/unknown_category.stderr
error: expected identifier
  --> tests/compile_fail/unknown_category.rs:12:30
   |
12 |         Quote . Name ::= "@" (Proc) ;
   |                              ^
